force-app/main/default/objects/Customer_Escalation__mdt/Customer_Escalation__mdt.object-meta.xml
<CustomObject>
    <label>Customer Escalation</label>
    <pluralLabel>Customer Escalations</pluralLabel>
</CustomObject>