force-app/main/default/objects/Customer_Escalation__mdt/fields/Complaint_Code__c.field-meta.xml
<CustomField>
        <fullName>Complaint_Code__c</fullName>
        <description>Comma separated list of complaint codes for this escalation.</description>
        <inlineHelpText>Comma separated list of complaint codes for this escalation.</inlineHelpText>
        <label>Complaint Code</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>