force-app/main/default/objects/Customer_Escalation__mdt/fields/Complaint_Codes__c.field-meta.xml
<CustomField>
        <fullName>Complaint_Codes__c</fullName>
        <description>Comma separated list of complaint codes for this escalation.</description>
        <inlineHelpText>Comma separated list of complaint codes for this escalation.</inlineHelpText>
        <label>Complaint Codes</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>