force-app/main/default/objects/Customer_Escalation__mdt/fields/Escalstion_Code__c.field-meta.xml
<CustomField>
        <fullName>Escalstion_Code__c</fullName>
        <description>Code to be for excalation</description>
        <inlineHelpText>Code to be for excalation</inlineHelpText>
        <label>Escalstion Code</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>