force-app/main/default/objects/Customer_Escalation__mdt/fields/Message__c.field-meta.xml
<CustomField>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>