force-app/main/default/objects/Customer_Escalation__mdt/fields/Occurances__c.field-meta.xml
<CustomField>
        <fullName>Occurances__c</fullName>
        <description>Number times a types of complaint are put on a subscription</description>
        <inlineHelpText>Number times a types of complaint are put on a subscription</inlineHelpText>
        <label>Occurances</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>