force-app/main/default/objects/Customer_Escalation__mdt/fields/Within_Days__c.field-meta.xml
<CustomField>
        <fullName>Within_Days__c</fullName>
        <description>Number of days since today the complaints have occured</description>
        <inlineHelpText>Number of days since today the complaints have occured</inlineHelpText>
        <label>Within Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>