force-app/main/default/objects/Customer_Escalation__mdt/listViews/All_w_Detail.listView-meta.xml
<ListView>
        <fullName>All_w_Detail</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Complaint_Code__c</columns>
        <columns>Escalation_Code__c</columns>
        <columns>Escalstion_Code__c</columns>
        <columns>Occurances__c</columns>
        <columns>Within_Days__c</columns>
        <filterScope>Everything</filterScope>
        <label>All w/ Detail</label>
    </ListView>